
5.2b1 -> 5.3a1
    - jbj: nix: handle both "nix-foo" and "nix foo" invocations in rpmnix ctor.
    - jbj: nix: refactor popt tables into -lrpmio.
    - jbj: nix: avoid deadlock, live with a leak, for rpmnix object. todo++.
    - jbj: ispras: stub in macro configuration attaching automated ISPRAS tests.
    - jbj: fix: don't display usage with "rpm -v", it clutters --eval output.
    - jbj: rpmdav: fix: rename url -> u using --without-neon. (John Thomson).
    - jbj: nix: add --xiu:stdenv query format template.
    - jbj: nix: add --nix:meta query format template.
    - proyvind: add rubygem(...) extractors from mandriva.
    - jbj: qf: add --wdj:srpm query format template.
    - jbj: add api-sanity-autotest.pl (GPL->LGPLv2 expected on next release).
    - jbj: _RequestPass: convert assert to returning "" if no password.
    - jbj: mireRegexec: return -1 error instead of segfault when mis-used.
    - jbj: argv: use stricter RPMstr_t/RPMint_t types instead of void *.
    - devzero2000: add an rpm-arg-max-doc.spec toy test spec in tests
    - proyvind: python: make sure that we always use our own rpm build and
	macros.
    - proyvind: filetriggers: don't pass filename as argument to scripts,
	(all) filenames are passed through stdin already.
    - rpm.org: swipe Tarjan's loopy scissors for hacking.
    - jbj: rpmts: add pluggable check/order/run method vectors.
    - jbj: hkp: add keys.rpm5.org as the default pubkey server.
    - jbj: fix: split NV iff V starts with digit string in lookupPackage().
    - jbj: fix: remove the inheirited %description before adding explicitly.
    - jbj: use a Bloom filter so that build sanity checks scale.
    - jbj: fix rpmInstallSourcePackage() refcnts and memory leaks.
    - jbj: fix: don't segfault on --rebuild. the better fix is to eliminate
	rpmInstallSourcePackage() entirely, todo++.
    - jbj: rpmio: teach rpmGetPath() to append explicit pesky trailing '/'.
    - jbj: hrmib: fix: add lazy Mkdir to instantiate in chroot's.